# SolPacket

./: .gitignore  Anchor.toml  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  project.txt
.orchids/: orchids.json
programs/zk-escrow/: Cargo.toml
programs/zk-escrow/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/claim/: layout.tsx
src/app/claim/[id]/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/components/: confirmation-modal.tsx  footer.tsx  gift-form.tsx  header.tsx  providers.tsx  qr-code-display.tsx  solana-provider.tsx  theme-toggle.tsx  wallet-button.tsx
src/lib/: escrow-utils.ts  solana-config.ts  supabase.ts  zk-privacy.ts
